<resources>
    <string name="app_name">ReuseMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="web_client_id">"739688854802-n3hbku3ckqctubkmjgk0q2cfpiksdbqd.apps.googleusercontent.com"</string>
    <string name="email">Email</string>
    <string name="text_login">Login</string>
    <string name="btn_login">LOGIN</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="upload_image">upload_image</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="furniture">Furniture</string>
    <string name="item_name">Item</string>
    <string name="save">SAVE</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="hint">hint</string>
    <string name="update">UPDATE</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="dismiss">dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="add_item_button">add_item_button</string>
    <string name="take_photo">Take Photo</string>
    <string name="select">Select</string>
    <string name="logout">logout</string>
    <string name="sign_up">SIGN UP</string>
    <string name="category">category</string>
    <string name="make_sure_wi_fi_or_mobile_data_is_turned_non_then_try_again">Make sure WI-FI or mobile data is turned \non, then try again</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string-array name="categories">
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Clothing and Accessories</item>
        <item>Vehicles</item>
        <item>Tools and Equipment</item>
        <item>Home and Garden</item>
    </string-array>

</resources>